<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".activity.LoginActivity">

   <include layout="@layout/layout_toolbar2"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:padding="@dimen/_10sdp"
                android:text="@string/electoral_literacy_club"
                android:textSize="@dimen/_18sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_40sdp"
                android:background="@color/titleTextColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_back"
                android:orientation="vertical"
                android:layout_margin="@dimen/_3sdp"
                android:padding="@dimen/_20sdp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etInstId"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:inputType="number"
                    android:background="@drawable/et_back"
                    android:hint="@string/enter_institution_id"
                    android:maxLines="1"
                    android:padding="@dimen/_3sdp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/btn_back"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/login"
                    android:textColor="@color/primaryTextColor"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvno_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/don_t_have_institution_id"
                    android:textColor="@color/primaryDarkColor"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="italic" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>